修改一些信息。

--- a/LTM.School/Views/Home/Index.cshtml
+++ b/LTM.School/Views/Home/Index.cshtml
@@ -5,20 +5,15 @@
  
 <div class="jumbotron">
     <h1>52ABP学校</h1>
-   
-
 </div>
 
- 
 <div class="row">
     <div class="col-md-4">
-            
-        <h2>欢迎大家来到52ABP学校</h2>
+            <h2>欢迎大家来到52ABP学校</h2>
         <p>
            本次课程会使用.NET CORE及EF CORE作为核心技术，带大家做出一个简单的学校管理系统。
         </p>
-        
-    </div>
+        </div>
     <div class="col-md-4">
         <h2>从0开始</h2>
         <p>这可以跟着视频一步一步的完成它。</p>
@@ -26,7 +21,7 @@
     <div class="col-md-4">
         <h2>如何下载</h2>
         <p>所有课程的源代码均可以到Github进行下载！</p>
-        <p>地址： <a target="_parent"  href="https://github.com/52ABP/LTM.School ">https://github.com/52ABP/LTM.School </a></p>
+        <p>地址： <a target="_parent"  href="https://github.com/52ABP/52ABP.School ">https://github.com/52ABP/52ABP.School </a></p>
     </div>
 </div>
 
