同步代码。修改跨站请求攻击和fiddler的演示。

--- a/LTM.School/Views/Students/Create.cshtml
+++ b/LTM.School/Views/Students/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LTM.School.Core.Models.Student
+﻿@model LTM.School.Application.Dtos.StudentDto
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create"  >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RealName" class="control-label"></label>
