--- a/LTM.School/Views/Students/Delete.cshtml
+++ b/LTM.School/Views/Students/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model LTM.School.Core.Models.Student
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "删除";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>删除</h2>
+<p class="text-danger">@ViewBag.SaveError </p>
+<h3>是否确定删除该条学生信息？</h3>
 <div>
-    <h4>Student</h4>
+    <h4>学生信息</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="删除" class="btn btn-default" /> |
+        <a asp-action="Index">返回列表</a>
     </form>
 </div>
