--- a/LTM.School/Views/Home/About.cshtml
+++ b/LTM.School/Views/Home/About.cshtml
@@ -4,4 +4,25 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>我叫梁桐铭， 微软最有价值专家(MVP)。
+    从事.NET开发5年有余，业余爱好看点书、玩点单机游戏。微软粉。从2015年5月开始在国内的开源社区中进行推广ASP.NETBoilerplate Project开源框架，创建了”角落的白板报”博客，发表一些基础性文章来帮助大家提高开发技巧!制作了代码生成器(ABP Code Generator)，辅助与ABP框架以提高开发人员的效率。
+    目前就职于成都积微物联电子商务有限公司--积微循环项目经理，从事B2B电商开发工作。
+    
+    创建的网上地址：
+
+    <ul>
+        
+        <li><a target="_parent" href="http://www.cnblogs.com/wer-ltm/">博客园_角落的白板报</a> </li>
+        <li><a target="_parent" href="https://github.com/ltm0203">GitHub地址</a> </li>
+        <li><a target="_parent" href="http://www.52abp.com">  个人网站</a> </li>
+    </ul>
+    视频观看地址：
+    <ul>
+        <li> <a tabindex="_parent" href="https://chuanke.baidu.com/3735870-241896.html">百度传课</a> </li>
+        @*<li> <a tabindex="_parent" href="http://study.163.com/provider/400000000309007/index.htm">网易云课堂</a> </li>
+        <li>segmentfault：还在审核中</li>*@
+    </ul>
+     
+    
+   
+  </p>
