修改联系我们页面。

--- a/LTM.School/Views/Home/Contact.cshtml
+++ b/LTM.School/Views/Home/Contact.cshtml
@@ -5,13 +5,20 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    <div>
+        <strong>52ABP .NET CORE 实战群:</strong><a target="_blank" href="https://jq.qq.com/?_wv=1027&k=5Qprggi">
+            <img src="http://pub.idqqimg.com/wpa/images/group.png" alt="52ABP .NET CORE 实战群" title="52ABP .NET CORE 实战群">
+        </a> 
+    </div>
+     
+    <div>
+        <strong>ABP代码生成器交流群（收费）:</strong><a target="_blank" href="https://jq.qq.com/?_wv=1027&k=5MxVaIt">
+            <img src="http://pub.idqqimg.com/wpa/images/group.png" alt="ABP代码生成器交流群" title="ABP代码生成器交流群">
+        </a>
+    </div>
 </address>
-
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <div class="" data-width="600" data-height="500">
+        <img data-original-src="//upload-images.jianshu.io/upload_images/1979022-18becf16fe0084d8.png" data-original-width="600" data-original-height="500" data-original-format="image/png" data-original-filesize="150032" class="" style="cursor: zoom-in;" src="//upload-images.jianshu.io/upload_images/1979022-18becf16fe0084d8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/600">
+    </div>
 </address>
