完成分页功能。

--- a/LTM.School/Views/Students/Create.cshtml
+++ b/LTM.School/Views/Students/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model LTM.School.Application.Dtos.StudentDto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "添加学生";
 }
 
-<h2>Create</h2>
+<h2>添加</h2>
 
-<h4>Student</h4>
+<h4>学生信息</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">返回列表</a>
 </div>
 
 @section Scripts {
