--- a/LTM.School/Views/Shared/Error.cshtml
+++ b/LTM.School/Views/Shared/Error.cshtml
@@ -1,5 +1,5 @@
-﻿@using LTM.School.Application.ViewModels
-@model LTM.School.Application.ViewModels.ErrorViewModel
+﻿@using LTM.School.ViewModels
+@model LTM.School.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
