--- a/LTM.School/Views/Courses/Create.cshtml
+++ b/LTM.School/Views/Courses/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model LTM.School.Core.Models.Course
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "添加课程";
 }
 
-<h2>Create</h2>
+<h2>添加</h2>
 
-<h4>Course</h4>
+<h4>课程信息</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -27,24 +27,23 @@
                 <input asp-for="Credits" class="form-control" />
                 <span asp-validation-for="Credits" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <label asp-for="Grade" class="control-label"></label>
-                <select asp-for="Grade" class="form-control"></select>
-                <span asp-validation-for="Grade" class="text-danger"></span>
+                <label asp-for="Department" class="control-label"></label>
+                <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentID">
+                    <option value="">-- 选择部门 --</option>
+                </select>
+                <span asp-validation-for="DepartmentId" class="text-danger" ></span>
             </div>
             <div class="form-group">
-                <label asp-for="DepartmentId" class="control-label"></label>
-                <select asp-for="DepartmentId" class ="form-control" asp-items="ViewBag.DepartmentId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="添加" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">返回列表</a>
 </div>
 
 @section Scripts {
