--- a/LTM.School/Views/Instructors/Create.cshtml
+++ b/LTM.School/Views/Instructors/Create.cshtml
@@ -1,13 +1,13 @@
-﻿@model LTM.School.Core.Models.Instructor
+﻿@using LTM.School.ViewModels
+@model LTM.School.Core.Models.Instructor
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "添加教师信息";
 }
 
-<h2>Create</h2>
+<h2>添加教师信息</h2>
 
-<h4>Instructor</h4>
-<hr />
+ <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -22,15 +22,59 @@
                 <input asp-for="HireDate" class="form-control" />
                 <span asp-validation-for="HireDate" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <label asp-for="OfficeAssignment.Location" class="control-label"></label>
+                <input asp-for="OfficeAssignment.Location" class="form-control"/>
+                <span asp-validation-for="OfficeAssignment.Location" class="text-danger"></span>
+            </div>
+            
+
+            <div class="form-group">
+                <label  class="control-label">课程列表：</label>
+                <div class="col-md-offset-1 col-md-10">
+                    <table>
+                        <tr>
+                            @{
+                                var count = 0;
+                                var courseDatas = (List<AssignedCourseData>) ViewData["Cousers"];
+                                foreach (var item in courseDatas)
+                                {
+                                    if (count++ % 3 == 0)
+                                    {
+                                        @:<tr></tr>
+
+                                    }
+                                    <td>
+                                        <input type="checkbox" name="selectedCourses" value="@item.CourseId" @(Html.Raw(item.Assigned ? "checked='checked'" : ""))/>
+                                        @item.CourseId @item.Title
+
+                                    </td>
+                                }
+                            }
+                        </tr>
+                    </table>
+
+
+                </div>
+
+
+            </div>
+
+            
+
+
+            
+
+            <div class="form-group">
+                <input type="submit" value="添加" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">返回列表</a>
 </div>
 
 @section Scripts {
