--- a/LTM.School/Views/Instructors/Delete.cshtml
+++ b/LTM.School/Views/Instructors/Delete.cshtml
@@ -1,15 +1,17 @@
 ﻿@model LTM.School.Core.Models.Instructor
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "删除教师信息";
 }
 
-<h2>Delete</h2>
+<h2>删除教师信息</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+@{
+    <h3>是否确认删除 @Model.RealName 教师信息？</h3>
+
+}
 <div>
-    <h4>Instructor</h4>
-    <hr />
+     <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.RealName)
