原生sql语句查询功能。

--- a/LTM.School/Views/Home/About.cshtml
+++ b/LTM.School/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
 
 
 <h2>学生信息统计</h2>
-<table>
+<table class="table">
     <tr>
         <th>注册时间</th>
         <th>学生人数</th>
@@ -16,6 +16,7 @@
     {
         <tr>
             <td>@Html.DisplayFor(a=>item.EnrollmenDate)</td>
+
             <td>@Html.DisplayFor(a => item.StudentCount)</td>
 
         </tr>
