原生的修改sql语句。

--- a/LTM.School/Views/Courses/Index.cshtml
+++ b/LTM.School/Views/Courses/Index.cshtml
@@ -8,6 +8,7 @@
 
 <p>
     <a asp-action="Create">添加课程</a>
+    <a asp-action="UpdateCourseCredits">修改所有课程学分</a>
 </p>
 <table class="table">
     <thead>
