--- a/LTM.School/Views/Shared/_Layout.cshtml
+++ b/LTM.School/Views/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - 52ABP学校管理系统 <script type="text/javascript">
-                                                           var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1273631610'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/stat.php%3Fid%3D1273631610%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));
-                                                       </script></p>
+            <p>&copy; @DateTime.Now.Year - 52ABP学校管理系统 
+                
+            <script src="https://s13.cnzz.com/z_stat.php?id=1274306527&web_id=1274306527" language="JavaScript"></script>
 
         </footer>
     </div>
